--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<body style="background-color:rgb(24, 25, 26);"></body>
 <style>
+  
 .btn{
   background-color: rgb(146, 90, 211);
   border: none;
@@ -40,20 +42,20 @@ font-family: Arial, Helvetica, sans-serif;
 }
 /* Change color on hover/mouse-over */
 .navbar a:hover {
-  background-color: #ddd; /* Grey background color */
-  color: black; /* Black text color */
+  background-color: rgb(70, 19, 104); /* Grey background color */
+  color: white; /* Black text color */
 }
 .leftcolumn {
   text-align: center;
   padding: 14px 20px;
   line-height: 1.6;
-  background-color: #ddd;
+  background-color: rgba(218, 218, 218, 0.336);
   float: left;
   width: 60%;
 }
 .card {
   text-align: center;
-  background-color: #ddd;
+  background-color: rgba(218, 218, 218, 0.336);
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -64,7 +66,7 @@ font-family: Arial, Helvetica, sans-serif;
 }
 .card2 {
   text-align: center;
-  background-color: #ddd;
+  background-color: rgba(218, 218, 218, 0.336);
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -100,18 +102,18 @@ h2 {text-align: center;
 
 <body>
     <div class="navbar">
-        <a class="btn" href="#">Home</a>
-        <a class="btn" href="portfolio.html">Portfolio</a>
+        <a href="#">Home</a>
+        <a href="portfolio.html">Portfolio</a>
     </div>
-<h1>Ben Reilly</h1>    
+<h1 style="color:white">Ben Reilly</h1>    
     <div class="row">
       <div id ="content_area">
         <img src="Files/Images/RangoPt2.jpg" alt="Image 1" class="center2">
-        <p class="card">
+        <p style="color:white;" class="card">
           Tell me this isn't a good placeholder image though. Mission goes here
         </p>
       </div>
-        <h2>
+        <h2 style="color:white;">
           My Links
         </h2>
         <div class="card">
@@ -121,12 +123,12 @@ h2 {text-align: center;
           <button class="btn" onclick="window.location.href='https://www.linkedin.com/in/ben-reilly-1b12a5246/';">LinkedIn</button>
         </div>
 
-        <h2>
+        <h2 style="color:white;">
           About Me
         </h2>
         <div class="content_area">
-          <p class="card2">
-            &nbsp;An aspiring Cloud Computing Specialist, programmer, game designer, and mod maker with a wide variety of experience and skills.
+          <p style="color:white;"class="card2">
+            An aspiring Cloud Computing Specialist, programmer, game designer, and mod maker with a wide variety of experience and skills.
             
             
             My varied experience includes writing scripts and programs, building websites, practicing cybersecurity through Kali Linux, creating games, and modding games.
