--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<body style="background-color:rgb(24, 25, 26);"></body>
 <style>
 .btn{
   background-color: rgb(146, 90, 211);
@@ -40,14 +41,14 @@ font-family: Arial, Helvetica, sans-serif;
 }
 /* Change color on hover/mouse-over */
 .navbar a:hover {
-  background-color: #ddd; /* Grey background color */
-  color: black; /* Black text color */
+  background-color: rgb(70, 19, 104); /* Grey background color */
+  color: white; /* Black text color */
 }
 .leftcolumn {
   text-align: center;
   padding: 14px 20px;
   line-height: 1.6;
-  background-color: #ddd;
+  background-color: rgba(218, 218, 218, 0.336);
   float: left;
   width: 50%;
   border-radius: 25px;
@@ -55,7 +56,7 @@ font-family: Arial, Helvetica, sans-serif;
 }
 .card {
   text-align: center;
-  background-color: #ddd;
+  background-color: rgba(218, 218, 218, 0.336);
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -81,15 +82,15 @@ h1 {text-align: center;
 
 <body>
     <div class="navbar">
-      <a class="btn"href="https://castlewhale.github.io/portfolio/">Home</a>
+      <a href="https://castlewhale.github.io/portfolio/">Home</a>
         
         
     </div>
-<h1>Ben Reilly</h1> 
+<h1 style="color:white">Ben Reilly</h1> 
     <div class="row">
       <div id ="content_area">
         <div class="card">
-          <p>Welcome to my project portfolio! Currently it consists of game projects I have been working on.</p>
+          <p style="color:white">Welcome to my project portfolio! Currently it consists of game projects I have been working on.</p>
           <button class="btn" onclick="window.location.href='https://castlewhale.github.io/devlog_site/';">My Game/Mod Devlog</button>
         </div>
       </div>
