--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,9 @@ h1 {text-align: center;
       <div id ="content_area">
         <div class="card">
           <p style="color:white">Welcome to my project portfolio! Currently it consists of game projects I have been working on.</p>
+          <button class="btn" onclick="window.location.href='aws.html">AWS Portfolio</button>
           <button class="btn" onclick="window.location.href='https://castlewhale.github.io/devlog_site/';">My Game/Mod Devlog</button>
+
         </div>
       </div>
     </div>
