--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ h2 {text-align: center;
         </h2>
         
         <div class="card">
-          
+          <a href="portfolio.html" class="btn">Portfolio</a>
           <button class="btn" onclick="location.href='Files/ResumeBenMReilly.docx.pdf';">Resume Link</button>
           <button class="btn" onclick="location.href='Files/CVBenMReilly.pdf'">CV Link</button>
           <button class="btn" onclick="window.location.href='https://www.linkedin.com/in/ben-reilly-1b12a5246/';">LinkedIn</button>
