--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ font-family: Arial, Helvetica, sans-serif;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  width: 25%;
   border-radius: 25px;
   border:1px solid black;
   padding: 25px
@@ -97,7 +97,7 @@ font-family: Arial, Helvetica, sans-serif;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 25%;
+  width: 35%;
   border-radius: 50%;
 }
 h1 {text-align: center;
@@ -118,7 +118,7 @@ h2 {text-align: center;
 <h1 style="color:white">Ben Reilly</h1>    
     <div class="row">
       <div id ="content_area">
-        <img src="Files/Images/IMG_5264.jpg" alt="Image 1" class="center2" height="600">
+        <img src="Files/Images/1674.jpg" alt="Image 1" class="center2" height="600">
         <h2 style="color:white;">
           My Mission
         </h2>
@@ -133,8 +133,7 @@ h2 {text-align: center;
         <div class="card">
           <a href="portfolio.html" class="btn">Portfolio</a>
           <button class="btn" onclick="location.href='Files/ResumeBenMReilly.docx.pdf';">Resume Link</button>
-          <button class="btn" onclick="location.href='Files/CVBenMReilly.pdf'">CV Link</button>
-          <button class="btn" onclick="window.location.href='https://www.linkedin.com/in/ben-reilly-1b12a5246/';">LinkedIn</button>
+          <button class="btn" onclick="window.location.href='https://www.linkedin.com/in/benmreilly/';">LinkedIn</button>
         </div>
 
         <h2 style="color:white;">
