--- a/index.html
+++ b/index.html
@@ -107,6 +107,23 @@ h2 {text-align: center;
   font-size: 30px
 }
 
+@media (max-width: 768px) {
+  /* styles for screens with a maximum width of 768 pixels */
+  .leftcolumn {
+    width: 50%;
+    margin: 0 auto;
+  }
+  .card3 {
+    width: 50%;
+  }
+  .card {
+    width: 80%;
+  }
+  .center2 {
+    width: 80%;
+  }
+}
+
 </style>
 </head>
 
