--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,25 @@ font-family: Arial, Helvetica, sans-serif;
 h1 {text-align: center;
   font-size: 70px
 }
+@media (max-width: 768px) {
+  /* styles for screens with a maximum width of 768 pixels */
+  .leftcolumn {
+    width: 50%;
+    margin: 0 auto;
+  }
+  .card3 {
+    width: 50%;
+  }
+  .card2 {
+    width: 90%;
+  }
+  .card {
+    width: 80%;
+  }
+  .center2 {
+    width: 80%;
+  }
+}
 
 </style>
 </head>
